project2/tests/reject/0-div-bad.cc
int main(){
    bool a=true;
    int b= 5;
    double c=1.0;
    a/b;
    b/a;
    c/a;
    a/c;
    return 0;
}